architecting-with-gke/kustomize/bases/services/cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver-clusterip
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: pyserver
  type: ClusterIP
