architecting-with-gke/kustomize/bases/services/container-native-neg.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver-neg
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec: 
  type: ClusterIP # or nodeport
  selector:
    app: pyserver
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
