architecting-with-gke/kustomize/bases/services/internal_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver-internal-loadbalancer
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pyserver
  type: LoadBalancer
