architecting-with-gke/kustomize/bases/services/internal_loadbalancer_global.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver-internal-loadbalancer-global
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pyserver
  type: LoadBalancer
