architecting-with-gke/kustomize/bases/services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver-loadbalancer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pyserver
  type: LoadBalancer
