architecting-with-gke/kustomize/bases/services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyserver-nodeport
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: pyserver
  type: NodePort
