architecting-with-gke/kustomize/bases/services/container-native-ingress-ilb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pyserver-cnilb-ingress
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  backend:
    serviceName: pyserver-neg
    servicePort: 8080
