architecting-with-gke/kustomize/bases/services/container-native-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pyserver-cnlb-ingress
spec:
  backend:
    serviceName: pyserver-neg
    servicePort: 8080
