architecting-with-gke/kustomize/bases/services/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pyserver-ingress
spec:
  backend:
    serviceName: pyserver-nodeport
    servicePort: 8080
  #rules:
  #- http:
  #    paths:
  #    - path: /*
  #      backend:
  #        serviceName: pyserver-nodeport
  #        servicePort: 8080
